2012-12-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/logfile.c (log_rename): Donot abort if the log do not
	  exists.

2012-12-10  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda-devices.7.xml: Typo, s/SWITF/SWIFT/.

2012-12-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: No src-ip in PORT-DUMP.

2012-12-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: Log FAILED if nothing is written to
	  tape.
	* server-src/amstatus.pl: Check ntape is defined.

2012-12-07 Dan Locks <dwlocks@zmanda.com>
	* packaging/common/post_inst_functions.sh: use amandausers's .gnupg/
	  instead of installing user's, and suppress warnings about
	  permissions.

2012-12-07 Dan Locks <dwlocks@zmanda.com>
	* common_z/post_inst_functions.sh: head and tail invocation may only
	  use "-#", not "-n #" for solaris 8 compatibility

2012-12-07  Jean-Louis Martineau <martineau@zmanda.com>
	* contrib/convert-zd-mtx-to-robot.sh: set tpchanger instead of
	  tapedev.

2012-12-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Fix 32 bits overflow.

2012-12-06 Dan Locks <dwlocks@zmanda.com>
	* packaging/common/post_inst_functions.sh: use --passphrase-fd to
	  support older versions of gpg.

2012-12-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Parse new PORT-DUMP format

2012-12-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Fix exit status.
	* installcheck/amstatus.pl: Fix for previous patch.

2012-12-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Show taping status after dump failure.

2012-12-05  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/taper.pl: Add check for previous patch.

2012-12-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Worker.pm: Do it at the right place.

2012-12-05  Jean-Louis Martineau <martineau@zmanda.com>