@@ -1,3 +1,7 @@
+2012-12-11  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Changer/multi.pm, server-src/amcheck-device.pl: Fix perl
+	  warning.
+
 2012-12-10  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/logfile.c (log_rename): Donot abort if the log do not
 	  exists.
